--- a/src/main/resources/templates/movies/searchMovies.html
+++ b/src/main/resources/templates/movies/searchMovies.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <th:block th:insert="~{fragments/heading :: heading}" />
+
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
 
     <title>Search Movies</title>
