--- a/src/main/resources/templates/directors/show-directors.html
+++ b/src/main/resources/templates/directors/show-directors.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <th:block th:insert="~{fragments/heading :: heading}" />
+
+<!--    <meta name="_csrf" th:content="${_csrf.token}"/>-->
+<!--    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
 
-    <script th:src="@{/js/directorsDelete.js}"></script>
+<!--    <script th:src="@{/js/util/csrf.js}" type="module"></script>-->
+    <script th:src="@{/js/directorsDelete.js}" type="module"></script>
+    <script th:src="@{/js/hideUpdateButtons.js}"></script>
 
     <title>All Directors</title>
 </head>
@@ -38,13 +45,14 @@
                 <a th:href="@{'/directors/' + ${temopDirector.directorId}}"
                    class="btn btn-dark btn-sm" th:text="'More'" />
 
-                <button class="btn btn-sm btn-danger delete-director-button"
+                <button sec:authorize="hasAnyAuthority('ROLE_ADMIN')" class="btn btn-sm btn-danger delete-director-button"
                         th:attr="data-director-id=${temopDirector.directorId}">
                     Delete
                 </button>
-
-                <a th:href="@{'/directors/update/' + ${temopDirector.directorId}}"
-                   class="btn btn-sm btn-info" th:text="'Update'" />
+<!--th:href="@{'/directors/update/' + ${temopDirector.directorId}}"-->
+                <a sec:authorize="hasAnyAuthority('ROLE_EDITOR', 'ROLE_ADMIN')"
+                   th:attr="data-director-id=${temopDirector.directorId}"
+                   class="btn btn-sm btn-info update-director-button" th:text="'Update'" />
             </td>
         </tr>
         </tbody>
