--- a/src/main/resources/templates/directors/updateDirector.html
+++ b/src/main/resources/templates/directors/updateDirector.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <th:block th:insert="~{fragments/heading :: heading}" />
+
+<!--    <meta name="_csrf" th:content="${_csrf.token}"/>-->
+<!--    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" />
     <link href="/css/customcss.css" rel="stylesheet" />
 
-    <script th:src="@{/js/updateDirector.js}" defer></script>
+    <script th:src="@{/js/updateDirector.js}" type="module"></script>
 
     <title>Update Director</title>
 </head>
